# financelake

./: .env  .env.example  .gitignore  COMPREHENSIVE_DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.producer  Dockerfile.spark  DocumentationDockernvarement.txt  FinanceLake_Architecture.md  IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  INTEGRATION_GUIDE.txt  README.md  SparkMLlib_trainer_and_predicter.py  VIDEO_DEMO_SCRIPT.md  api.py  app.py  app_control_v0.py  clean_data_output.sh  dashboard.py  data_endpoint.py  data_storage_design.md  delta_lake_queries.sql  docker-compose.minimal.yml  docker-compose.yml  finance_delta_hdfs.py  financelake_config.json  financelake_dashboard.py  financelake_spark.py  kafka_procucer.py  main.py  middleware.py  producer.py  requirements.txt  spark_delta_consumer.py  spark_processor.py  start_data_ingestion.sh  start_services.sh  stock-producer.py  stock_data.py  (+6 more)
Dashboard/: dashboard.html  index.html  script.js  sources.html  style.css
ProjetBibDataMachineLearning/: REDIS_GUIDE.md  config.py  dashboard_realtime_v2.py  main.py  monitor_realtime.py  requirements.txt  run_realtime_infinite.py  start_redis.py
app/: data_fetcher.py  main.py  stock_dashboard.py
auth/: app.py  config.py  readme.md  requirements.txt
benchmarks/: benchmark_large_dataset.py
config/: cache_config.py
data-ingestion-dashboard/: .gitignore  README.md  requirements.txt
data-ingestion-kafka/: README.md  gitignore  kafka_producer.py
data_ingestion/: README.md
data_storage/: data_storage.py  data_storage_design.md
docs/: README.md  architecture.md  architecture_documentation.md  documentation.md
financelake_terminal/: .env.example  README.md  config.py  dashboard.py  model.ipynb  producer.ipynb  requirements.txt  streaming_processor.ipynb
financelake_v1/: .gitignore  docker-compose.yml
ingestion/: README.md
ingestion_dashboard/: app.py  ingestion_simulator.py
kafka-test/: README.md  config.py  kafka-test  kafka_consumer.py  kafka_producer.py
libs/shared/: pyproject.toml
libs/shared/src/financelake_shared/: __init__.py  config.py
nifi/: FinanceLake_Batch_XML.xml
producer/: Dockerfile  README.md  producer.py  requirements.txt
redis_cache/: README.md  _init__.py  prometheus.yml  (+3 more)
(+8932 files in other folders)
